--- a/p/ai-racing/index.html
+++ b/p/ai-racing/index.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/knn-classifier"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     </head>
     <body>
         <!--<script src="index.js"></script>-->
+        <script src="classes/model.js"></script>
+        <script src="classes/memory.js"></script>
         <script src="classes/sensor_display.js"></script>
         <script src="classes/car.js"></script>
         <script src="sketch.js"></script>
