deploy: 63dfea2ff1ed416e4b536a8cc88799e7cc99b3e9

--- a/garden/index.html
+++ b/garden/index.html
@@ -12,4 +12,4 @@
 <script src=/js/dark.js></script>
 <script src=/js/isotope.js></script>
 <script src=/js/mermaid.min.js></script>
-<script>mermaid.initialize({startOnLoad:!0,securityLevel:"loose"})</script></body></html>
+<script>mermaid.initialize({startOnLoad:!0,securityLevel:"loose"})</script><script src=/js/custom.js></script></body></html>
