deploy: b5b9503ca982f475730d21d3e742efb79098760b

--- a/cv/index.html
+++ b/cv/index.html
@@ -154,8 +154,8 @@
     <span class="education__line bg-primary block h-full w-[2px] translate-x-[7px]"></span>
   </div>
   <div class="experience__data bd-grid px-5">
-    <h3 class="font-semibold mb-1">Web Developer at Fiverr</h3>
-    <span class="font-light text-sm">From March 2021 to June at June 2021</span>
+    <h3 class="font-semibold mb-1">Freelance Web Developer</h3>
+    <span class="font-light text-sm">From March 2021 to June 2021</span>
     <p class="my-2 text-justify">
       
       <ul class="list-disc">
